--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,13 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
+
 {% block title %}
 Post
 {% endblock title %}
 
 {% block content %}
-<h1>{{ post }}</h1>
+<h1>{{ post.title|censor }}</h1>
+<h1>{{ post.text|censor }}</h1>
+<h1>{{ post.dateCreation }}</h1>
 {% endblock content %}
