New_Portal D.4.7 singIn/singUp, groups and perms

--- a/templates/flatpages/about.html
+++ b/templates/flatpages/about.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
-    <h3>Django practice:</h3>
+    <h3>Новостной портал</h3>
 {{ flatpage.content }}
 {% endblock content %}
