New_Portal D.4.7 login/logout/registration buttons

--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -33,6 +33,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Contact</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
                         {% if user.is_authenticated == False %}
                         <li class="nav-item">
                             <a class="nav-link" href="/accounts/login">Вход</a>
