--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -28,10 +28,10 @@
                             <a class="nav-link" href="/news/">Главная страница</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
+                            <a class="nav-link" href="/about/">О проекте</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts/">Contact</a>
+                            <a class="nav-link" href="/contacts/">Наши контакты</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -43,6 +43,9 @@
                             <a class="nav-link" href="/accounts/signup">Регистрация</a>
                         </li>
                         {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/subscriptions/">Подписки</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/accounts/logout">Выход из учетной записи</a>
                         </li>
