New_Portal django_apscheduler

--- a/templates/post_created.html
+++ b/templates/post_created.html
@@ -5,7 +5,7 @@
     <title>Уведомление</title>
 </head>
 <body>
-  <h2>Новая <a href="linh">статья</a> по подписке </h2>
-  <p>{{text}}</p>
+  <h2>Новая <a href="{{ link }}">статья</a> по подписке </h2>
+  <p>{{ text }}</p>
 </body>
 </html>
